# study_pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-colab.txt
.github/dependabot/: requirements-dev.txt  requirements.txt
.github/workflows/: apply_lint_and_test.yaml
colab/: cnn_mnist.ipynb
doc/: classifier.md
notebook/: MNIST_classification.ipynb  adaline_train.ipynb  car_fuel_efficiency.ipynb  image.ipynb  loggistic_regression.ipynb  preceptoron_train.ipynb  pytorch_first.ipynb  pytorch_newral_network.ipynb  pytorch_sequential.ipynb  sklearn-iris.ipynb
src/study_pytorch/: Perceptron.py  __init__.py
study_pytorch/: __init__.py  adaline.py  classifier.py  perceptron.py  plot_util.py  torch_first.py
tests/: test_plot_util.py
