[project]
name = "study-pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wakabame", email = "wakabame89@gmail.com" }
]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.2",
    "pandas>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.11.4"

[project.scripts]
hello = "study_pytorch:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/study_pytorch"]
