[project]
name = "study-pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wakabame", email = "wakabame89@gmail.com" }
]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.2",
    "pandas>=2.2.0",
    "pandas-stubs>=2.1.4.231227",
    "nptyping>=2.5.0",
    "notebook>=7.0.7",
]
readme = "README.md"
requires-python = ">= 3.11.4"

[project.scripts]
hello = "study_pytorch:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "pre-commit>=3.6.0",
    "black[jupyter]>=23.12.1",
    "pytest>=7.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["study_pytorch"]

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []

fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
exclude = '''
(
    venv
    | .mypy_cache
    | .pytest_cache
)
'''
